# gkr

./: Cargo.toml  rustc-ice-2024-09-03T14_16_18-37540.txt
gkr/: Cargo.toml
gkr-gadget/src/hash/: keccak.rs
gkr/benches/: component.rs
gkr/src/: circuit.rs  lib.rs  poly.rs  transcript.rs
gkr/src/circuit/: dag.rs  node.rs
gkr/src/circuit/node/: fft.rs  lasso.rs  log_up.rs  vanilla.rs
gkr/src/circuit/node/lasso/: surge.rs  table.rs
gkr/src/circuit/node/lasso/memory_checking/: mod.rs  prover.rs  verifier.rs
gkr/src/circuit/node/lasso/table/: range.rs
gkr/src/poly/: dense.rs  repeated.rs  terms.rs
gkr/src/util/: dev.rs
src/: lib.rs  libra.rs  sum_check.rs  transcript.rs
