[package]
name = "gkr"
version = "0.1.0"
edition = "2021"

[dependencies]
ff-ext = { path = "../ff-ext" }
rayon = { workspace = true }
auto_impl = { workspace = true }
itertools = { workspace = true }
rand_core = { workspace = true }
rand_chacha = { workspace = true }
rand = { workspace = true, optional = true }
plonkish_backend = { workspace = true }
strum = "0.26.0"
enum_dispatch = "0.3.12"

[dev-dependencies]
rand = { workspace = true }
criterion = { workspace = true }
goldilocks = { workspace = true }
halo2_curves = { workspace = true }
num-integer = "0.1.45"
strum_macros = "0.26.4"

[features]
default = []
dev = ["dep:rand"]
sanity-check = []

[[bench]]
name = "sum_check"
harness = false
required-features = ["dev"]

[[bench]]
name = "component"
harness = false
required-features = ["dev"]
